--- a/main/templates/register_customer.html
+++ b/main/templates/register_customer.html
@@ -179,16 +179,13 @@
         console.log("customer data", data);
 
         try {
-          const response = await fetch(
-            "https://restaurantbooking-9936a12856a8.herokuapp.com/api/customers/create/",
-            {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify(data),
-            }
-          );
+          const response = await fetch("/api/customers/create/", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(data),
+          });
 
           if (response.ok) {
             showMessage("Registration successful!");
