--- a/main/templates/customer.html
+++ b/main/templates/customer.html
@@ -25,7 +25,7 @@
         width: 100%;
         box-sizing: border-box;
       }
-      .register-container{
+      .register-container {
         text-align: center;
         margin-bottom: 20px;
         font-size: 16px;
@@ -121,7 +121,7 @@
       <h1>Log In</h1>
       <div class="register-container">
         <span class="register-text">Don't have an account?</span>
-        <a href="{% url 'customer_register' %}" class="register" >Register</a>
+        <a href="{% url 'customer_register' %}" class="register">Register</a>
       </div>
       <form id="login-form" onsubmit="loginCustomer(event)">
         <input type="email" name="email" placeholder="Email" required />
@@ -152,7 +152,7 @@
 
         try {
           const response = await fetch(
-            "https://restaurant-booking-no1-ae7b2991e60d.herokuapp.com/api/customer/login/", // Adjust endpoint as needed
+            "/api/customer/login/", // Adjust endpoint as needed
             {
               method: "POST",
               headers: {
@@ -169,7 +169,7 @@
             localStorage.setItem("customerEmail", email);
 
             showMessage("Login successful!");
-            window.location.href = "https://restaurant-booking-no1-ae7b2991e60d.herokuapp.com/customer/dashboard/";
+            window.location.href = "/customer/dashboard/";
             // Redirect to home or dashboard
           } else {
             const result = await response.json();
